--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         },
         "devDependencies": {},
         "scripts": {
-                "build": "webpack",
-                "start": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build --host 192.168.1.200",
-                "test": "echo \"Error: no test specified\" && exit 1"
+                "build": "webpack --progress --colors",
+                "watch": "webpack --progress --colors --watch",
+                "start": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build --host 192.168.1.200"
         },
         "author": "",
         "license": "BSD-2-Clause",
